--- a/android/src/main/res/layout/activity_call_incoming.xml
+++ b/android/src/main/res/layout/activity_call_incoming.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/background"
+    android:background="#eef1f5"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:gravity="center_horizontal"
-    >
-
-        <RelativeLayout
-            android:layout_width="170dp"
-            android:layout_height="170dp"
+        android:background="#ff9e15"
+        android:paddingVertical="30dp"
         >
+        <TextView
+            android:layout_marginBottom="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textSize="22sp"
+            android:fontFamily="sans-serif"
+            android:textColor="#FFFFFF"
+            android:text="Oladoc Video Call"
+            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            >
+
             <ImageView
                 android:id="@+id/ivAvatar"
                 android:layout_width="130dp"
@@ -29,7 +38,7 @@
                 android:src="@drawable/ic_avatar_default"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-            />
+                />
 
             <ImageView
                 android:id="@+id/ivRing1"
@@ -40,7 +49,7 @@
                 android:src="@drawable/ic_ring"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-            />
+                />
 
             <ImageView
                 android:id="@+id/ivRing2"
@@ -50,7 +59,7 @@
                 android:src="@drawable/ic_ring"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-            />
+                />
         </RelativeLayout>
 
         <TextView
@@ -61,7 +70,7 @@
             android:textSize="22sp"
             android:fontFamily="sans-serif"
             android:textColor="#FFFFFF"
-        />
+            />
 
         <TextView
             android:id="@+id/tvInfo"
@@ -70,9 +79,9 @@
             android:layout_marginTop="10dp"
             android:textSize="14sp"
             android:fontFamily="sans-serif"
-            android:textColor="#ADADAD"
-        />
-
+            android:textColor="#DCDCDC"
+            android:text="This call is end to end encrypted"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +90,7 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="10dp"
     >
 
         <LinearLayout
@@ -107,8 +116,8 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 android:fontFamily="sans-serif"
-                android:textColor="#ADADAD"
-                android:text="@string/decline"
+                android:textColor="#000066"
+                android:text="Reject"
                 android:gravity="center"
             />
         </LinearLayout>
@@ -135,8 +144,8 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 android:fontFamily="sans-serif"
-                android:textColor="#ADADAD"
-                android:text="@string/accept"
+                android:textColor="#000066"
+                android:text="Accept"
                 android:gravity="center"
             />
         </LinearLayout>
