--- a/android/src/main/res/layout/activity_call_incoming.xml
+++ b/android/src/main/res/layout/activity_call_incoming.xml
@@ -22,7 +22,7 @@
             android:textSize="22sp"
             android:fontFamily="sans-serif"
             android:textColor="#FFFFFF"
-            android:text="Oladoc Video Call"
+            android:text="oladoc video consultation"
             />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,38 +35,21 @@
                 android:layout_height="130dp"
                 android:scaleType="fitXY"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_avatar_default"
+                android:src="@drawable/ic_call_patient"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 />
 
-            <ImageView
-                android:id="@+id/ivRing1"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_ring"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                />
-
-            <ImageView
-                android:id="@+id/ivRing2"
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_ring"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                />
         </RelativeLayout>
 
         <TextView
+            android:paddingHorizontal="40dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:textSize="22sp"
             android:fontFamily="sans-serif"
             android:textColor="#FFFFFF"
@@ -76,12 +59,13 @@
             android:id="@+id/tvInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:textSize="14sp"
             android:fontFamily="sans-serif"
-            android:textColor="#DCDCDC"
-            android:text="This call is end to end encrypted"
+            android:textColor="#F4F4F4"
             />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -91,6 +75,26 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif"
+            android:textColor="#C1C1C1"
+            android:text="This call is end to end encrypted"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
     >
 
         <LinearLayout
